ipc/ipdl/test/ipdl/ok/Pactorparam.ipdl
protocol Pactorparam {

child: async Msg(Pactorparam p);

};
