ipc/ipdl/test/ipdl/error/tooWeakRPCAsync.ipdl
protocol tooWeakRPCAsync {

    // it's an error to declare an async protocol with an rpc message

parent:  rpc Msg();

};
